--- a/app/src/main/res/layout/recycler_item_note.xml
+++ b/app/src/main/res/layout/recycler_item_note.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <androidx.compose.ui.platform.ComposeView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
+
 </layout>
