--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,7 @@
             android:layout_height="match_parent"
             tools:listitem="@layout/recycler_item_note"
             app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+            app:spanCount="2"
             android:paddingVertical="@dimen/_25sdp"
             android:adapter="@{viewModel.homeAdapter}"
             android:clipToPadding="false"
