[ MVI WITH HOME NOTES FRAGMENT | HANDLE CLICK AND LONG CLICK WITH NOTE | ADD DELETE IMAGE | HANDLE PIN STATE FOR NOTE ]

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,6 +9,18 @@
         android:id="@+id/homeFragment"
         android:name="com.el3asas.note.ui.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_noteDetailsFragment"
+            app:destination="@id/noteDetailsFragment" />
+    </fragment>
+    <dialog
+        android:id="@+id/noteDetailsFragment"
+        android:name="com.el3asas.note.ui.noteDetails.NoteDetailsFragment"
+        android:label="NoteDetailsFragment">
+        <argument
+            android:name="noteId"
+            app:argType="long" />
+    </dialog>
 
 </navigation>
