[ HANDLE ADD AND UPDATE NOTE | ADD COLOR FOR NOTE | HANDLE ADD NOTE STATES | USE IMAGES PICKER |
]

--- a/app/src/main/res/layout/fragment_add_update.xml
+++ b/app/src/main/res/layout/fragment_add_update.xml
@@ -1,18 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data>
-
-        <import type="android.view.View" />
-
-        <variable
-            name="viewModel"
-            type="com.el3asas.note.ui.add_update.AddUpdateViewModel" />
-    </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/m_compose_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent" />
 </layout>
