--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,47 +13,6 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/app_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/collapsingToolBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:contentScrim="@color/purple_500"
-                app:statusBarScrim="@color/purple_500"
-                android:background="@color/white">
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_collapseMode="parallax"
-                    android:orientation="vertical">
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/app_name"
-                        android:textSize="@dimen/_14ssp"
-                        android:textStyle="bold|italic"
-                        android:textAlignment="center"
-                        android:layout_marginTop="@dimen/_24sdp" />
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text='@{@string/last_edit_time+viewModel.lastEditDate}'
-                        android:textSize="@dimen/_10ssp"
-                        android:textAlignment="center"
-                        android:paddingBottom="@dimen/_40sdp"
-                        android:layout_marginTop="@dimen/_8sdp" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
-        </com.google.android.material.appbar.AppBarLayout>
-
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/nav_host_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
@@ -71,8 +30,8 @@
             android:id="@+id/add_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_anchor="@id/app_bar"
-            app:layout_anchorGravity="bottom|end"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/_16sdp"
             android:onClick="@{viewModel::addNote}"
             android:layout_marginHorizontal="@dimen/_16sdp"
             app:icon="@drawable/ic_round_add_24"
