--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,8 +2,12 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph.xml"
+    android:id="@+id/nav_graph"
     app:startDestination="@id/homeFragment">
+
+    <action
+        android:id="@+id/openAddDialog"
+        app:destination="@id/addUpdateFragment" />
 
     <fragment
         android:id="@+id/homeFragment"
@@ -13,6 +17,9 @@
         <action
             android:id="@+id/action_homeFragment_to_noteDetailsFragment"
             app:destination="@id/noteDetailsFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_addUpdateFragment"
+            app:destination="@id/addUpdateFragment" />
     </fragment>
     <dialog
         android:id="@+id/noteDetailsFragment"
@@ -21,6 +28,16 @@
         <argument
             android:name="noteId"
             app:argType="long" />
+    </dialog>
+    <dialog
+        android:id="@+id/addUpdateFragment"
+        android:name="com.el3asas.note.ui.add_update.AddUpdateFragment"
+        android:label="AddUpdateFragment">
+        <argument
+            android:name="noteId"
+            app:argType="long"
+            android:defaultValue="-1L"
+            />
     </dialog>
 
 </navigation>
